[#8] Added image capture functionality and permission checking for camera access

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths>
     <cache-path name="share" path="share/" />
     <external-path name="external_files" path="."/>
+    <external-path name="image_search" path="Android/data/${applicationId}/files/Pictures" />
 </paths>
