--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -108,4 +108,7 @@
     <string name="preference_key_show_multilingual_task">showMultilingualTask</string>
     <string name="preference_key_show_edit_action_add_title_descriptions_onboarding">showEditActionAddTitleDescriptionsOnboarding</string>
     <string name="preference_key_turn_off_history">showTurnOffHistory</string>
+    <string name="preference_key_tts_pitch">pitch</string>
+    <string name="preference_key_tts_speech_rate">speechRate</string>
+    <string name="preference_key_tts_preview">ttsPreview</string>
 </resources>
