--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -25,6 +25,11 @@
             android:defaultValue="0"
             android:title="@string/preference_title_app_theme"
             android:summary="@string/preference_summary_color_theme"/>
+        <org.wikipedia.settings.SwitchPreferenceMultiLine
+            android:key="@string/preference_key_turn_off_history"
+            android:defaultValue="false"
+            android:title="@string/preference_title_turn_off_history"
+            android:summary="@string/preference_summary_turn_off_history" />
     </PreferenceCategory>
     <PreferenceCategory
         android:key="@string/preference_category_sync"
