--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -39,6 +39,32 @@
             android:text="@string/history_empty_message" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/no_history_container"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/no_history_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            style="@style/MaterialLargePrimaryTitle"
+            android:text="@string/no_history_title" />
+        <TextView
+            android:id="@+id/no_history_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+
+            android:gravity="center"
+            style="@style/MaterialMediumSecondaryCaption"
+            android:text="@string/no_history_message" />
+    </LinearLayout>
+
     <org.wikipedia.views.SearchEmptyView
         android:id="@+id/search_empty_view"
         android:layout_width="wrap_content"
