--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -37,12 +37,14 @@
             android:title="@string/preference_title_tts_pitch"
             android:entries="@array/tts_pitch_entries"
             android:entryValues="@array/tts_pitch_values"
+            android:defaultValue="1.0f"
             android:summary="%s"/>
         <ListPreference
             android:key="@string/preference_key_tts_speech_rate"
             android:title="@string/preference_title_tts_speech_rate"
             android:entries="@array/tts_speech_rate_entries"
             android:entryValues="@array/tts_speech_rate_values"
+            android:defaultValue="1.0f"
             android:summary="%s"/>
         <org.wikipedia.settings.PreferenceMultiLine
             android:key="@string/preference_key_tts_preview"
