--- a/app/src/main/res/menu/menu_text_select.xml
+++ b/app/src/main/res/menu/menu_text_select.xml
@@ -18,14 +18,19 @@
           android:visible="false"
           app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/menu_text_edit_here"
+        android:title="@string/menu_text_select_edit_here"
+        android:icon="@drawable/ic_mode_edit_themed_24dp"
+        app:showAsAction="ifRoom" />
+
     <item android:id="@+id/menu_text_select_hear"
           android:title="@string/menu_text_select_hear"
           android:icon="@drawable/ic_hear_themed"
           app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/menu_text_edit_here"
-        android:title="@string/menu_text_select_edit_here"
-        android:icon="@drawable/ic_mode_edit_themed_24dp"
-        app:showAsAction="ifRoom" />
+    <item android:id="@+id/menu_text_select_translate"
+          android:title="Translate"
+          android:icon="@drawable/ic_translate_black"
+          app:showAsAction="ifRoom"/>
 
 </menu>
