--- a/app/src/main/res/layout/item_categories_result.xml
+++ b/app/src/main/res/layout/item_categories_result.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:paddingTop="@dimen/list_item_vertical_padding"
+android:paddingRight="@dimen/list_item_horizontal_padding"
+android:paddingBottom="@dimen/list_item_vertical_padding"
+android:paddingLeft="@dimen/list_item_horizontal_padding"
+android:background="?attr/paper_color"
+android:foreground="?attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/categories_results_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="81dp"
-        android:text="TextView" />
+<com.facebook.drawee.view.SimpleDraweeView
+    style="@style/SimpleDraweeViewPlaceholder.Article"
+    android:id="@+id/item_categories_result_image"
+    android:layout_width="@dimen/view_list_card_item_image"
+    android:layout_height="@dimen/view_list_card_item_image"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:roundedCornerRadius="2dp"
+    app:backgroundImage="@color/base100" />
 
-</RelativeLayout>
+<TextView
+    android:id="@+id/item_categories_result_title"
+    style="@style/MaterialListTitle"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/item_categories_result_image"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="Lorem ipsum" />
+
+</android.support.constraint.ConstraintLayout>
