--- a/app/src/main/res/layout/dialog_translate.xml
+++ b/app/src/main/res/layout/dialog_translate.xml
@@ -76,6 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
+                android:lineSpacingExtra="4dp"
                 android:textColor="?attr/primary_text_color"
                 />
 
