[#15] Added progress bar for translation

--- a/app/src/main/res/layout/dialog_translate.xml
+++ b/app/src/main/res/layout/dialog_translate.xml
@@ -83,4 +83,12 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
+    <ProgressBar
+        android:id="@+id/dialog_translate_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
 </FrameLayout>
