[#28] Remove api keys from secrets.xml

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_vision_api_key">AIzaSyBsHLdPEEULxNPH6PQOs6P2dgbjX7ry-2E</string>
-    <string name="google_translation_api_key">AIzaSyBsHLdPEEULxNPH6PQOs6P2dgbjX7ry-2E</string>
+    <string name="google_vision_api_key"></string>
+    <string name="google_translation_api_key"></string>
 </resources>
