--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -8,6 +8,16 @@
     android:orientation="vertical"
     android:background="?attr/main_toolbar_color">
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+    />
+
     <android.support.v4.view.ViewPagerWithVelocity
         android:id="@+id/random_item_pager"
         android:layout_width="match_parent"
