--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -21,10 +21,35 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/recommended_categories_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="12dp"
+                android:text="@string/recommended_categories"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="24sp"/>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/categories_recommended"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:cardElevation="8dp"
+                app:cardUseCompatPadding="true">
+
+                <ListView
+                    android:id="@+id/recommended_categories_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
                 android:id="@+id/top_categories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:paddingTop="12dp"
                 android:text="@string/top_categories"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -46,7 +71,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -85,7 +109,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -124,7 +147,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -163,7 +185,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -202,7 +223,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -241,7 +261,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -280,7 +299,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -319,7 +337,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -358,7 +375,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -397,7 +413,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -436,7 +451,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
@@ -475,7 +489,6 @@
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="8dp"
                     app:cardElevation="8dp"
                     app:cardUseCompatPadding="true">
 
