--- a/app/src/main/res/layout/fragment_random.xml
+++ b/app/src/main/res/layout/fragment_random.xml
@@ -8,6 +8,21 @@
     android:orientation="vertical"
     android:background="?attr/main_toolbar_color">
 
+    <RelativeLayout
+        android:id="@+id/spinner_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_spinner"
+        android:layout_marginRight="30px"
+        android:layout_marginLeft="30px"
+        android:padding="8dp">
+        <Spinner
+            android:id="@+id/spinner"
+            style="@style/Widget.AppCompat.DropDownItem.Spinner"
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+    </RelativeLayout>
+
     <android.support.v4.view.ViewPagerWithVelocity
         android:id="@+id/random_item_pager"
         android:layout_width="match_parent"
