[#82] added a new tab in the navigation drawer

--- a/app/src/main/res/layout/view_main_drawer.xml
+++ b/app/src/main/res/layout/view_main_drawer.xml
@@ -198,6 +198,27 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/main_drawer_features_container"
+        style="@style/SideDrawerMenuItem">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_fiber_new_black_24dp"
+            app:tint="?attr/material_theme_secondary_color" />
+
+        <TextView
+            style="@android:style/TextAppearance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_weight="1"
+            android:text="@string/main_drawer_new_features" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/main_drawer_about_container"
         style="@style/SideDrawerMenuItem">
 
