--- a/app/src/main/res/layout/fragment_chat_message_sent.xml
+++ b/app/src/main/res/layout/fragment_chat_message_sent.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/chat_message_sent_user_image"
@@ -19,16 +19,14 @@
 
     <TextView
         android:id="@+id/chat_message_sent_text"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toStartOf="@+id/chat_message_sent_user_image"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Lorem ipsum doler sit @string/reading_list_action_menu_add_to_another_list" />
+        tools:text="Lorem ipsum doler sit" />
 </android.support.constraint.ConstraintLayout>
