--- a/app/src/main/res/layout/fragment_chat_message_received.xml
+++ b/app/src/main/res/layout/fragment_chat_message_received.xml
@@ -9,21 +9,23 @@
         android:id="@+id/chat_message_received_user_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/transparent" />
+        app:srcCompat="@drawable/ic_user_avatar" />
 
     <TextView
         android:id="@+id/chat_message_received_text"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/received_message"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/chat_message_received_user_image"
@@ -34,10 +36,14 @@
         android:id="@+id/chat_message_received_username"
         android:layout_width="69dp"
         android:layout_height="13dp"
-        android:layout_marginStart="10dp"
-        android:textSize="8sp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:paddingLeft="1dp"
+        android:paddingTop="2dp"
+        android:textSize="10sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/chat_message_received_text"
         app:layout_constraintStart_toEndOf="@+id/chat_message_received_user_image"
-        tools:layout_editor_absoluteY="9dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Anon 123" />
 </android.support.constraint.ConstraintLayout>
