--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -21,8 +21,10 @@
             android:id="@+id/chat_title"
             android:layout_width="361dp"
             android:layout_height="wrap_content"
-            android:fontFamily="casual"
-            android:text="TextView"
+            android:fontFamily="sans-serif"
+            android:paddingLeft="5dp"
+            android:text="@string/chat_title"
+            android:textColor="@android:color/black"
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,9 +37,9 @@
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
             android:layout_margin="2dp"
-            android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
+            android:visibility="visible"
             app:srcCompat="@drawable/chip_close_button_dark" />
 
     </LinearLayout>
