--- a/app/src/main/res/layout/fragment_chat_message_sent.xml
+++ b/app/src/main/res/layout/fragment_chat_message_sent.xml
@@ -20,13 +20,14 @@
     <TextView
         android:id="@+id/chat_message_sent_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/sent_message"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:paddingBottom="3dp"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/chat_message_sent_user_image"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
