--- a/app/src/main/res/layout/fragment_chat_message_sent.xml
+++ b/app/src/main/res/layout/fragment_chat_message_sent.xml
@@ -6,31 +6,27 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/chat_message_sent_user_image"
+        android:id="@+id/chat_message_sent_user_image3"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/transparent" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_user_avatar" />
 
     <TextView
         android:id="@+id/chat_message_sent_text"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/sent_message"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="3dp"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/chat_message_sent_user_image"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/chat_message_sent_user_image3"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Lorem ipsum doler sit" />
 </android.support.constraint.ConstraintLayout>
