[#79] Adjusting UI and adding seperators for layouts

--- a/app/src/main/res/layout/fragment_chat_message_sent.xml
+++ b/app/src/main/res/layout/fragment_chat_message_sent.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/sent_message"
+        android:maxWidth="200dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="3dp"
