--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -11,8 +11,10 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/chat_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/chat_divider_top"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -42,15 +44,37 @@
             app:srcCompat="@drawable/chip_close_button_light" />
     </android.support.constraint.ConstraintLayout>
 
+    <View
+        android:id="@+id/chat_divider_top"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000"
+        app:layout_constraintBottom_toTopOf="@+id/chat_message_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_title_layout" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chat_message_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/chat_divider_bot"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_divider_top">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <View
+        android:id="@+id/chat_divider_bot"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000"
         app:layout_constraintBottom_toTopOf="@+id/chat_text_input_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chat_title_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/chat_message_view" />
 
     <LinearLayout
         android:id="@+id/chat_text_input_layout"
@@ -61,7 +85,8 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_divider_bot">
 
         <EditText
             android:id="@+id/chat_text_input"
