--- a/app/src/main/res/layout/fragment_chat_message_received.xml
+++ b/app/src/main/res/layout/fragment_chat_message_received.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/received_message"
+        android:maxWidth="200dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="3dp"
