[#79] Adding style to match Wiki standards

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -22,7 +22,7 @@
             android:id="@+id/chat_title"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/droid_serif"
             android:paddingLeft="5dp"
             android:text="@string/chat_title"
             android:textColor="@android:color/black"
@@ -48,7 +48,9 @@
         android:id="@+id/chat_divider_top"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#000"
+        android:background="@color/base18"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/chat_message_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,7 +72,9 @@
         android:id="@+id/chat_divider_bot"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#000"
+        android:background="@color/base18"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/chat_text_input_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
